recursion.cons.lessons.recursion.cons.Nlast.scala.error
nlast:12: error: reassignment to val
		n=l.size;
                 ^